--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
 configurations {
     ktlint
 }
+test {
+    useJUnitPlatform()
+}
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
@@ -22,7 +25,11 @@ dependencies {
     implementation 'org.nanohttpd:nanohttpd:2.2.0'
 
     ktlint "com.pinterest:ktlint:0.39.0"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+   // testCompile group: 'junit', name: 'junit', version: '4.12'
+    def kotest = "4.2.5"
+    testImplementation "io.kotest:kotest-runner-junit5:${kotest}" // for kotest framework
+    testImplementation "io.kotest:kotest-assertions-core:${kotest}" // for kotest core jvm assertions
+    testImplementation "io.kotest:kotest-property:${kotest}" // for kotest property test
 }
 
 task ktlint(type: JavaExec, group: "verification") {
@@ -42,3 +49,4 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     classpath = configurations.ktlint
     args "-F", "src/**/*.kt"
 }
+
