--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,6 @@ repositories {
 configurations {
     ktlint
 }
-test {
-    useJUnitPlatform()
-}
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
@@ -25,11 +22,7 @@ dependencies {
     implementation 'org.nanohttpd:nanohttpd:2.2.0'
 
     ktlint "com.pinterest:ktlint:0.39.0"
-   // testCompile group: 'junit', name: 'junit', version: '4.12'
-    def kotest = "4.2.5"
-    testImplementation "io.kotest:kotest-runner-junit5:${kotest}" // for kotest framework
-    testImplementation "io.kotest:kotest-assertions-core:${kotest}" // for kotest core jvm assertions
-    testImplementation "io.kotest:kotest-property:${kotest}" // for kotest property test
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 task ktlint(type: JavaExec, group: "verification") {
@@ -49,4 +42,3 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     classpath = configurations.ktlint
     args "-F", "src/**/*.kt"
 }
-
