--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ configurations {
 }
 test {
     useJUnitPlatform()
+    testLogging.showStandardStreams = true
+
+    testLogging {
+        events "PASSED", "FAILED", "SKIPPED", "STANDARD_OUT", "STANDARD_ERROR"
+    }
 }
 
 dependencies {
