--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       # run linter!
       - run:
           name: pre-check
-          command: ./gradlew ktlint lint --no-daemon
+          command: chmod +x ./gradlew ktlint lint --no-daemon
 
       # run tests!
       - run: gradle test
