--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,6 @@ jobs:
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
     working_directory: ~/repo
 
     environment:
@@ -41,7 +36,7 @@ jobs:
       # run linter!
       - run:
           name: pre-check
-          command: chmod +x ./gradlew ktlint
+          command: ./gradle ktlint
 
       # run tests!
       - run: gradle test
