--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,8 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
+      # run linter!
+      - run: gradle ktlint
+
       # run tests!
       - run: gradle test
