--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'org.nanohttpd:nanohttpd:2.2.0'
 
     ktlint "com.pinterest:ktlint:0.39.0"
-   // testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation "io.mockk:mockk:1.10.0"
     def kotest = "4.2.5"
     testImplementation "io.kotest:kotest-runner-junit5:${kotest}" // for kotest framework
     testImplementation "io.kotest:kotest-assertions-core:${kotest}" // for kotest core jvm assertions
