--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ test {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.0'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
     implementation 'org.nanohttpd:nanohttpd:2.2.0'
     compile group: 'com.squareup.moshi', name: 'moshi', version: '1.10.0'
