#22 jacoco + basic readme

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,3 +50,5 @@ jobs:
           path: ~/test-results
       - store_artifacts:
           path: ~/test-results/junit
+
+      - run: gradle jacocoTestCoverageVerification
