--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
       #code coverage
       - run:
           name: Code coverage
-          command: gradle jacocoTestCoverageVerification
+          command: mkdir -p ~/code-coverage/ && gradle jacocoTestCoverageVerification
       - store_artifacts:
           path: /build/jacocoHtml/
-          destination: /code-coverage/
+          destination: ~/code-coverage/
