--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ jacoco {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.0'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
