--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     testImplementation "io.kotest:kotest-runner-junit5:${kotest}" // for kotest framework
     testImplementation "io.kotest:kotest-assertions-core:${kotest}" // for kotest core jvm assertions
     testImplementation "io.kotest:kotest-property:${kotest}" // for kotest property test
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9'
 }
 
 compileKotlin {
