--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
 version: 2
+orbs:
+  codecov: codecov/codecov@1.0.2
 jobs:
   build:
     docker:
@@ -50,11 +52,10 @@ jobs:
           path: ~/test-results
       - store_artifacts:
           path: ~/test-results/junit
+      - codecov/upload:
+          file: "./build/jacoco/test/jacocoTestReport.xml
 
-      #code coverage
+#      #code coverage
 #      - run:
 #          name: Code coverage
 #          command: mkdir -p ~/code-coverage/ && gradle jacocoTestCoverageVerification
-#      - store_artifacts:
-#          path: /build/jacocoHtml/
-#          destination: ~/code-coverage/
