--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,9 @@ jobs:
       - store_artifacts:
           path: ~/test-results/junit
       - codecov/upload:
-          file: .*/build/reports/jacoco/test/jacocoTestReport.xml
+          file: ./build/reports/jacoco/test/jacocoTestReport.xml
+
+      - run: gradle jacocoTestCoverageVerification
 
 #      # code coverage
 #      - run:
