--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.4.10'
     id 'jacoco'
     id 'org.barfuin.gradle.jacocolog' version '1.2.3'
+    id 'java-library'
 }
 
 group 'pcf.crskdev'
