Gradle building lib sources support.

--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,14 @@ repositories {
     jcenter()
 }
 
+java {
+    withSourcesJar()
+}
+
 configurations {
     ktlint
 }
+
 test {
     useJUnitPlatform()
     testLogging {
