--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'jacoco'
     id 'org.barfuin.gradle.jacocolog' version '1.2.3'
     id 'java-library'
+    id 'org.jetbrains.dokka' version '1.4.20'
 }
 
 group 'pcf.crskdev'
@@ -12,10 +13,12 @@ version '0.1-SNAPSHOT'
 repositories {
     mavenCentral()
     jcenter()
+    gradlePluginPortal()
 }
 
 java {
     withSourcesJar()
+    withJavadocJar()
 }
 
 configurations {
@@ -62,6 +65,7 @@ jacocoTestCoverageVerification {
         }
     }
 }
+
 jacoco {
     toolVersion = "0.8.5"
 }
